# cosmic-applet-prayer-times

./: .gitignore  Cargo.toml  DESIGN.md  Makefile  README.md  TESTING.md  design-prompt.md  design.pen  justfile
assets/: README.md
resources/: app.desktop  app.metainfo.xml
src/: app.rs  audio.rs  config.rs  i18n.rs  main.rs  prayer.rs
