[package]
name = "cosmic-applet-prayer-times"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "COSMIC panel applet showing Islamic prayer times and playing the adhan"
repository = "https://github.com/Shunseii/cosmic-applet-prayer-times"

[[bin]]
name = "cosmic-applet-prayer-times"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
salah = "0.7.6"
hijri_date = "0.5.1"
rodio = "0.22"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = [
    # Applet support (panel button + popup window)
    "applet",
    "applet-token",
    # Additional application windows (the popup)
    "multi-window",
    # tokio executor for the async runtime
    "tokio",
    # Wayland support in winit
    "wayland",
    # Windowing backend
    "winit",
    # Native file picker via the XDG desktop portal
    "xdg-portal",
]

[profile.release]
lto = "thin"
